tests/toylang/neg/001544_mutation.toylang
program a = { var while a do sleep; } .
